--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
                     <option>Other</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="bloodGroup">Blood Group *</label>
+                <select id="bloodGroup" required>
+                    <option value="A+">A+</option>
+                    <option value="A-">A-</option>
+                    <option value="B+">B+</option>
+                    <option value="B-">B-</option>
+                    <option value="AB+">AB+</option>
+                    <option value="AB-">AB-</option>
+                    <option value="O+">O+</option>
+                    <option value="O-">O-</option>
+                </select>
+            </div>
             
             <h3>Emergency Contact Information</h3>
             <div class="form-group"><label for="emergencyName">Emergency Contact Person Name *</label><input type="text" id="emergencyName" required></div>
